fix: adjust alignment and spacing in profile

--- a/blocks/premium-learning-active-content/premium-learning-active-content.css
+++ b/blocks/premium-learning-active-content/premium-learning-active-content.css
@@ -93,6 +93,10 @@
 
 /* Card Styling */
 
+.premium-learning-active-content .cohort-card-wrapper .browse-card.premium-learning-browse-card {
+  width: auto;
+}
+
 .premium-learning-active-content
   .cohort-card-wrapper
   .browse-card.premium-learning-browse-card
