--- a/styles/theme/profile.css
+++ b/styles/theme/profile.css
@@ -31,7 +31,7 @@ body.profile-home-page .section:not(.sign-up-flow-section) {
   background-color: unset;
   border: unset;
   margin: 0 20px;
-  padding: 40px 16px;
+  padding: 40px 0;
   border-bottom: 1px solid var(--spectrum-gray-300);
 }
 
@@ -40,6 +40,7 @@ body.profile-home-page .section.premium-learning-section {
   border-radius: 20px;
   background-color: var(--non-spectrum-bg);
   border: 1px solid var(--spectrum-gray-300);
+  margin-top: 40px;
 }
 
 body.profile .section.bg-white {
@@ -99,10 +100,6 @@ body.profile-home-page
   .section:not(.profile-rail-section, .sign-up-flow-section)
   > div:not(.default-content-wrapper, .profile-welcome-wrapper) {
   padding-bottom: 40px;
-}
-
-body.profile-home-page .section:not(.sign-up-flow-section):has(+ .premium-learning-section) {
-  border-bottom: none;
 }
 
 body.profile:not(.profile-home-page)
@@ -184,11 +181,12 @@ body.profile-home-page .section.premium-learning-section h3:not(.browse-card-ban
 
   body.profile-home-page .section:not(.sign-up-flow-section) {
     margin: 0 24px;
-    padding: 48px;
+    padding: 48px 0;
   }
 
   body.profile-home-page .section.premium-learning-section {
-    padding: 32px 48px 24px;
+    padding: 32px 32px 24px;
+    margin-top: 48px;
   }
 
   body.profile-home-page
